[gd_scene load_steps=5 format=3 uid="uid://cv7icf10es610"]

[ext_resource type="Texture2D" uid="uid://b0pl8ort5lurl" path="res://Assets/Locations/AbandonedCellar.png" id="1_6dmjr"]
[ext_resource type="Script" path="res://Scripts/Locations/abandoned_place.gd" id="1_shb43"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1pr0"]
size = Vector2(69, 142)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sth5k"]
size = Vector2(63, 118)

[node name="AbandonedPlace" type="Node2D"]
script = ExtResource("1_shb43")

[node name="AbandonedCellar" type="Sprite2D" parent="."]
position = Vector2(320, 180)
texture = ExtResource("1_6dmjr")

[node name="AbandonedCellar2" type="Area2D" parent="."]
position = Vector2(542, 144)

[node name="CollisionShape2D" type="CollisionShape2D" parent="AbandonedCellar2"]
position = Vector2(-1.5, 0)
shape = SubResource("RectangleShape2D_t1pr0")

[node name="Outside" type="Area2D" parent="."]
position = Vector2(176, 71)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Outside"]
position = Vector2(-4.5, -12)
shape = SubResource("RectangleShape2D_sth5k")

[connection signal="input_event" from="AbandonedCellar2" to="." method="_on_abandoned_cellar_2_input_event"]
[connection signal="mouse_entered" from="AbandonedCellar2" to="." method="_on_abandoned_cellar_2_mouse_entered"]
[connection signal="mouse_exited" from="AbandonedCellar2" to="." method="_on_abandoned_cellar_2_mouse_exited"]
[connection signal="input_event" from="Outside" to="." method="_on_outside_input_event"]
[connection signal="mouse_entered" from="Outside" to="." method="_on_outside_mouse_entered"]
[connection signal="mouse_exited" from="Outside" to="." method="_on_outside_mouse_exited"]
